feat(main): Add some styles & test table

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,7 +7,77 @@
   </div>
   <a href="/" class="header-title">MyBookList</a>
 </div>
-
-<h1>MyBookList</h1>
-<p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
-<img src="../../assets/images/booklet.png">
+<div class="cover">
+  <h1>MyBookList</h1>
+  <img src="../../assets/images/booklet.png">
+  <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
+</div>
+<div>
+  <table>
+    <tr>
+      <th>img</th>
+      <th>title</th>
+      <th> author
+      <th> genres
+      <th> description
+      <th> created
+      <th> progress
+      </tr>
+    <tr>
+      <td>1</td>
+      <td></td>
+      <td>Harry Potter and the Philosopher's Stone</td>
+      <td>J.K. Rowling</td>
+      <td>Fantasy</td>
+      <td>But not everything is quiet at Hogwarts as Harry suspects someone is planning to steal the
+        | sorcerer's stone. On his eleventh birthday, Harry Potter discovers that he is no ordinary boy.
+        | Hagrid, a beetle-eyed giant, tells Harry that he is a wizard and has a place at Hogwarts School
+        | of Witchcraft and Wizardry.
+      </td>
+      <td>26 June 1997 (UK)</td>
+      <td>52/223</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td></td>
+      <td>Wiedźmin</td>
+      <td>Anjey Sapcowski</td>
+      <td>Fantasy</td>
+      <td>Geralt of Rivia is a witcher. A cunning sorcerer. A merciless assassin. And a cold-blooded killer.
+        | His sole purpose: to destroy the monsters that plague the world| But not everything monstrous-looking
+        is evil and not everything fair is good...
+        | and in every fairy tale there is a grain of truth.
+      </td>
+      <td>1993</td>
+      <td>320/320</td>
+    <tr>
+      <td>3</td>
+      <td></td>
+      <td>Monday Begins on Saturday</td>
+      <td>Arkady and Boris Strugatsky</td>
+      <td>Novel</td>
+      <td>Set in a fictional town in northern Russia, where highly classified research in magic occurs, the
+        | novel is a satire of Soviet scientific research institutes, complete with an inept administration,
+        | a dishonest, show-horse professor, and numerous equipment failures. It offers an idealistic view of
+        | the scientific work ethic, as reflected in the title which suggests that the scientists'
+        | weekends are nonexistent.
+      </td>
+      <td>1965</td>
+      <td>20/270</td>
+    </tr>
+    <tr></tr>
+    <tr>
+      <td>4</td>
+      <td></td>
+      <td>Alice's Adventures in Wonderland</td>
+      <td>Lewis Carroll</td>
+      <td>Children's fiction</td>
+      <td> Alice is sitting with her sister outdoors when she spies a White Rabbit with a pocket watch.
+        | Fascinated by the sight, she follows the rabbit down the hole. She falls for a long time, and
+        | finds herself in a long hallway full of doors.
+      </td>
+      <td>1865</td>
+      <td>15/76</td>
+    </tr>
+  </table>
+</div>
