feat(main): Add status menu

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,6 +11,7 @@
   <img src="../../assets/images/booklet.png">
   <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
 </div>
+<status-menu></status-menu>
 <div class="list">
   <table>
     <tr>
