--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,7 +11,15 @@
   <img src="../../assets/images/booklet.png">
   <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
 </div>
-<status-menu></status-menu>
+<div class="status-menu">
+  <div class="status all-books" ng-click="allBooks()">All Books</div>
+  <div class="status reading" ng-click="reading()">Currently Reading</div>
+  <div class="status completed" ng-click="completed()">Completed</div>
+  <div class="status on-hold" ng-click="onHold()">On Hold</div>
+  <div class="status dropped" ng-click="dropped()">Dropped</div>
+  <div class="status plan-to-watch" ng-click="planToWatch()">Plan to Read</div>
+</div>
+
 <div class="list">
   <table>
     <tr>
@@ -23,9 +31,10 @@
       <th>Comment</th>
       <th>Created</th>
       <th>Progress</th>
+      <th></th>
     </tr>
-    <tr ng-repeat="book in $ctrl.books">
-      <td>{{book.id}}</td>
+    <tr ng-repeat="book in $ctrl.books | filter: {status: selectedStatus}">
+      <td>{{$index + 1}}</td>
       <td></td>
       <td>{{book.title}}</td>
       <td>{{book.author}}</td>
@@ -33,6 +42,19 @@
       <td>{{book.comment}}</td>
       <td>{{book.created}}</td>
       <td>{{book.currentPage}} / {{book.totalPages}}</td>
+      <td>
+        <div class="edit-more-delete">
+          <span class="edit">
+            <a class="inList" href="#">Edit</a>
+          </span>
+          <span class="more">
+            <a class="inList" href="#">More</a>
+          </span>
+          <span class="delete">
+            <a class="inList" href="#">Delete</a>
+          </span>
+        </div>
+      </td>
     </tr>
   </table>
 </div>
