--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,17 +12,17 @@
   <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
 </div>
 <div class="status-menu">
-  <div class="status all-books" ng-click="allBooks()">All Books</div>
-  <div class="status reading" ng-click="reading()">Currently Reading</div>
-  <div class="status completed" ng-click="completed()">Completed</div>
-  <div class="status on-hold" ng-click="onHold()">On Hold</div>
-  <div class="status dropped" ng-click="dropped()">Dropped</div>
-  <div class="status plan-to-watch" ng-click="planToWatch()">Plan to Read</div>
+  <div class="status all-books" ng-class="{'active':selectedStatus === undefined}" ng-click="allBooks()">All Books</div>
+  <div class="status reading" ng-class="{'active':selectedStatus === 1}" ng-click="reading()">Currently Reading</div>
+  <div class="status completed" ng-class="{'active':selectedStatus === 2}" ng-click="completed()">Completed</div>
+  <div class="status on-hold" ng-class="{'active':selectedStatus === 3}" ng-click="onHold()">On Hold</div>
+  <div class="status dropped" ng-class="{'active':selectedStatus === 4}" ng-click="dropped()">Dropped</div>
+  <div class="status plan-to-watch" ng-class="{'active':selectedStatus === 5}" ng-click="planToWatch()">Plan to Read</div>
 </div>
 
 <div class="list">
   <table>
-    <tr>
+    <tr class="table-header">
       <th>#</th>
       <th>Image</th>
       <th>Title</th>
@@ -34,9 +34,9 @@
       <th></th>
     </tr>
     <tr ng-repeat="book in $ctrl.books | filter: {status: selectedStatus}">
-      <td>{{$index + 1}}</td>
+      <td class="index">{{$index + 1}}</td>
       <td></td>
-      <td>{{book.title}}</td>
+      <td class="title">{{book.title}}</td>
       <td>{{book.author}}</td>
       <td></td>
       <td>{{book.comment}}</td>
