--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,12 +12,12 @@
   <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
 </div>
 <div class="status-menu">
-  <div class="status all-books" ng-class="{'active':selectedStatus === undefined}" ng-click="allBooks()">All Books</div>
-  <div class="status reading" ng-class="{'active':selectedStatus === 1}" ng-click="reading()">Currently Reading</div>
-  <div class="status completed" ng-class="{'active':selectedStatus === 2}" ng-click="completed()">Completed</div>
-  <div class="status on-hold" ng-class="{'active':selectedStatus === 3}" ng-click="onHold()">On Hold</div>
-  <div class="status dropped" ng-class="{'active':selectedStatus === 4}" ng-click="dropped()">Dropped</div>
-  <div class="status plan-to-watch" ng-class="{'active':selectedStatus === 5}" ng-click="planToWatch()">Plan to Read</div>
+  <div class="status all-books hvr-underline-from-center" ng-class="{'active':selectedStatus === undefined}" ng-click="allBooks()">All Books</div>
+  <div class="status reading hvr-underline-from-center" ng-class="{'active':selectedStatus === 1}" ng-click="reading()">Currently Reading</div>
+  <div class="status completed hvr-underline-from-center" ng-class="{'active':selectedStatus === 2}" ng-click="completed()">Completed</div>
+  <div class="status on-hold hvr-underline-from-center" ng-class="{'active':selectedStatus === 3}" ng-click="onHold()">On Hold</div>
+  <div class="status dropped hvr-underline-from-center" ng-class="{'active':selectedStatus === 4}" ng-click="dropped()">Dropped</div>
+  <div class="status plan-to-watch hvr-underline-from-center" ng-class="{'active':selectedStatus === 5}" ng-click="planToWatch()">Plan to Read</div>
 </div>
 
 <div class="list">
