--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,6 +8,18 @@
 </div>
 
 <div class="side-menu">
+  <a class="menu-item" href="#">
+    <span class="text">Quick Add</span>
+  </a>
+  <a class="menu-item" href="#">
+    <span class="text">Book List</span>
+  </a>
+  <a class="menu-item" href="#">
+    <span class="text">Manga List</span>
+  </a>
+  <a class="menu-item" href="#">
+    <span class="text">Authors</span>
+  </a>
 </div>
 
 <div class="list-container">
