feat(sidemenu): Move to a separate component

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,20 +7,7 @@
   <a href="/" class="header-title">MyBookList</a>
 </div>
 
-<div class="side-menu">
-  <a class="menu-item" href="#">
-    <span class="text">Quick Add</span>
-  </a>
-  <a class="menu-item" href="#">
-    <span class="text">Book List</span>
-  </a>
-  <a class="menu-item" href="#">
-    <span class="text">Manga List</span>
-  </a>
-  <a class="menu-item" href="#">
-    <span class="text">Authors</span>
-  </a>
-</div>
+<sidemenu></sidemenu>
 
 <div class="list-container">
   <div class="cover">
