feat(cover): Move to a separate component

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,11 +3,7 @@
 <sidemenu></sidemenu>
 
 <div class="list-container">
-  <div class="cover">
-    <h1>MyBookList</h1>
-    <img src="../../assets/images/booklet.png">
-    <p class="lead">HOW MUCH BOOKS HAVE YOU READ?</p>
-  </div>
+  <cover></cover>
 
   <div class="status-menu">
     <div class="status all-books" ng-class="{'active':selectedStatus === undefined}" ng-click="allBooks()">All Books</div>
