refactor(app): Rename main to book
Create a couple components for the future

--- a/client/_index.html
+++ b/client/_index.html
@@ -8,7 +8,11 @@
   <meta name="author" content="Val Saven">
   <meta name="viewport" content="width=device-width">
 </head>
-  <body>
-    <div ui-view=""></div>
-  </body>
+<body>
+  <header></header>
+  <sidemenu></sidemenu>
+  <cover></cover>
+  <statusmenu></statusmenu>
+  <div ui-view=""></div>
+</body>
 </html>
